2015-February-28 Struan Robertson

	* UnitTest.cpp: Fix for test break (roll back of 17-Feb-2015 change).

	* SensitivityAnalysis.cpp: R-squared statistic added.
	
2015-February-27 Struan Robertson

	* System.cpp: Fix for Chebyshev test break.
	
2015-February-22 Chris Morley

    * Windows VC12/Mesmer/Mesmer.vcxproj: Debug mesmer.exe now in
    \Windows VC12\Debug\  Release exe still in \Windows VC12\Mesmer\

    * src/plugins/HinderedRotorQM1D.cpp: use only one endl;

2015-February-21 Chris Morley

    * src/gDensityOfStates.cpp: Modify handling of energy conventions;
    thermodynamic298K now used only internally to aid conversion.

    * src/XMLPersist.cpp,src/XMLPersist.h: a default property attribute is
    now achieved by copying attributes; a slightly different entry in
    defaults.xml still allows copying a whole missing property.

    * MesmerQA/UnitTests/UnitTests.xml: Removed specification of the
    molecule energies in the datafile, which are unused. Baseline is
    unchanged.

    * src/gStructure.cpp,src/MoleculeManager.cpp: messages and formatting.

src/plugins/ThermodynamicTable.cpp

2015-February-19 Struan Robertson

	* System.h: Set micro properties re-calculation flag for sensitivity
	analysis.
	
2015-February-17 Struan Robertson

	* SensitivityAnalysis.cpp: Fix for old SA table generation method.
	
2015-February-17 Struan Robertson

	* SensitivityAnalysis.cpp, examples/ipropyl - SA: Baseline update.
	
	* UnitTest.cpp: Fix for multiple output of hindered rotor state values.	
	
2015-February-15 Struan Robertson

	* SensitivityAnalysis.cpp, examples/ipropyl - SA: Improved output text.
	
	* ThermodynamicTable.cpp: Fixed build breaks.	
	
2015-February-15 Chris Morley

    * src/plugins/ThermodynamicTable.cpp: do more in parse phase. Better info
    on why when NASA Polynomials are not produced.

    * src/gDensityOfStates.cpp,src/gDensityOfStates.h,
    src/MoleculeManager.cpp,src/MoleculeManager.h:rationalize energy