@@ -1,3 +1,9 @@
+
+2015-February-28 Struan Robertson
+
+	* SensitivityAnalysis.cpp: Added implementation to write indices to
+	output .xml.
+	
 2015-February-28 Struan Robertson
 
 	* UnitTest.cpp: Fix for test break (roll back of 17-Feb-2015 change).
